2015-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/*:
	  Reformat to reduce diff to upstream cpp.

2015-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.lex:
	  Support C95 wide string literals.

2015-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/include/*:
	  Reformat to reduce diff to upstream version.

2015-10-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/util/dbuf_string.c:
	  Add check for null pointer.

2015-10-09 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c:
	  Wrap strtoul() to support $-prefix hex numbers.

2015-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* New memory management by merging malloc branch into trunk.

2015-10-09 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkaomf51.c:
	  Add bound check while accessing a buffer in the heap.

2015-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/files.c:
	  Drop cpp support for Borland C.

2015-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/charconst.c,
	  support/regression/tests/escape.c:
	  Disable some tests for host, so we don't need a C11 host.

2015-10-07 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCval.c:
	  Add bound check in reorderIlist().
	* support/regression/bug-2423.c:
	  Add a new test case.

2015-10-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCutil.h,
	  src/SDCCutil.c,
	  src/SDCCval.c,
	  support/regression/tests/charconst.c,
	  support/regression/tests/escape.c:
	  Implement escape sequences for wide character constants, fix universal escape sequences.

2015-10-06 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/uchar.h,
	  src/SDCCval.h,
	  src/SDCCval.c,
	  src/SDCC.lex,
	  src/SDCCutil.c,
	  src/SDCCmain.c,
	  src/SDCCglobl.h,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/charconst.c:
	  Wide character constants.
